--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: .                   # The root folder
+      dockerfile: backend/Dockerfile # Path to the Dockerfile
     container_name: birhan-backend
     ports:
       - "5000:5000"
